# tap-productboard

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci_workflow.yml
tap_productboard/: client.py  streams.py  tap.py
tap_productboard/schemas/: companies.json  components.json  features.json  initiatives.json  key_results.json  notes.json  objectives.json  products.json  release_groups.json  releases.json  users.json
tests/: test_tap.py
