[project]
name = "tap-productboard"
version = "0.1.0"
description = "A Singer tap for Productboard"
authors = [
    {name = "Jeremy Carbaugh", email = "jeremy@jcarbaugh.com"},
    {name = "Syncly"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "singer-sdk>=0.42.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tap-productboard = "tap_productboard.tap:TapProductboard.cli"

[tool.hatch.build.targets.wheel]
packages = ["tap_productboard"]

[tool.isort]
multi_line_output = 3
profile = "black"
src_paths = "tap_klaviyo"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["tap_productboard"]

[tool.uv]
package = true

